add icon/file, manage folders

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="favicon" href="./Pagefavicon.ico">
     <title>My Homepage</title>
   </head>
   <body>
