--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="favicon" href="./Pagefavicon.ico">
+    <link rel="icon" href="https://doilob.github.io//favicon.ico?v=2" />
     <title>My Homepage</title>
   </head>
   <body>
