--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="favicon" href="./Pagefavicon.ico">
-    <link rel="icon" href="https://doilob.github.io//favicon.ico?v=2" />
+    <link rel="icon" href="https://doilob.github.io/Pagefavicon.ico?v=2" />
     <title>My Homepage</title>
   </head>
   <body>
