--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="icon" href="https://doilob.github.io/Pagefavicon.ico?v=2" />
+    <link rel="shortcut icon" href="/Pagefavicon.ico" type="image/x-icon">
     <title>My Homepage</title>
   </head>
   <body>
