--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="icon" href="\Pagefavicon.ico" type="image/x-icon" sizes="16x16">
+    <link rel="icon" href=image\favicon.ico type="image/x-icon" sizes="16x16">
     <title>My Homepage</title>
   </head>
   <body>
