edit code, add image file / folders

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
   <head>
     <meta charset="utf-8">
     <link rel="icon" href="image\My_Hompage_icon.ico" type="image/x-icon" sizes="16x16">
@@ -7,5 +7,6 @@
   </head>
   <body>
     <p>This is my page</p>
+    <a href="https://github.com/Doilob"><img src="image\github-mark\github-mark\github-mark.png" title="My github" width="50" height="50">
   </body>
 </html>
