add fonts, add css file, edit code

--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html lang="ko">
   <head>
     <meta charset="utf-8">
+    <link href="styles\styles.css" rel="stylesheet" type="text/css" />
     <link rel="icon" href="image\My_Hompage_icon.ico" type="image/x-icon" sizes="16x16">
+
     <title>My Homepage</title>
+
+    <h1 style="font-family:'DNFBitBit'">사이트 이름</h1>
   </head>
-  <body>
+  <body style="margin:0px;">
+    <hr style="border: solid 3px black; margin: 0%;">
     <p>This is my page</p>
     <a href="https://github.com/Doilob"><img src="image\github-mark\github-mark\github-mark.png" title="My github" width="50" height="50">
   </body>
