--- a/index.html
+++ b/index.html
@@ -2,16 +2,20 @@
 <html lang="ko">
   <head>
     <meta charset="utf-8">
-    <link href="styles\styles.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="styles\styles.css">
     <link rel="icon" href="image\My_Hompage_icon.ico" type="image/x-icon" sizes="16x16">
 
-    <title>My Homepage</title>
+    <title>My Archive</title>
 
-    <h1 style="font-family:'DNFBitBit'">사이트 이름</h1>
+    <h1 id="MainSub">사이트 이름</h1>
   </head>
-  <body style="margin:0px;">
+  <body style="margin:5px;">
+
+    <!-- 가로줄 긋기 -->
     <hr style="border: solid 3px black; margin: 0%;">
+
     <p>This is my page</p>
-    <a href="https://github.com/Doilob"><img src="image\github-mark\github-mark\github-mark.png" title="My github" width="50" height="50">
+
+    <a href="https://github.com/Doilob"><img src="image\github-mark\github-mark\github-mark.png" title="My github" width="150" height="150">
   </body>
 </html>
