--- a/index.html
+++ b/index.html
@@ -8,30 +8,32 @@
 </head> 
 <body> 
   <!-- 컨테이너 시작 -->
-  <div class="container"> 
-    <div class="left-half"> 
-      <p>Main Archive</p> 
-    </div> 
-    <div class="right-half"> 
-        <input id="check-btn" type="checkbox" />
-        <label for="check-btn" class="menu-label">Click Me!</label>
-            <ul class="menu-list">
-                <li class="menu-item">메뉴</li>
-                <li class="menu-item">메뉴</li>
-                <li class="menu-item">메뉴</li>
-                <li class="menu-item">메뉴</li>
-            </ul>
-    </div> 
-  </div> <!-- 컨테이너 끝 -->
-  <!-- 페이지 제목 --> 
-  <h1>This is my page</h1> 
-  <!-- 버튼과 링크 --> 
-  <a href="https://github.com/Doilob">   
-    <img id="icon" src="image\github-mark\github-mark\github-mark.png" alt="My github" title="My github"> 
-  </a> 
+    <div class="container"> 
+        <div class="left-half"> 
+        <p>Main Archive</p> 
+        </div> 
+        <div class="right-half"> 
+            <input id="check-btn" type="checkbox" />
+            <label for="check-btn" class="menu-label">Click Me!</label>
+                <ul class="menu-list">
+                    <li class="menu-item">메뉴</li>
+                    <li class="menu-item">메뉴</li>
+                    <li class="menu-item">메뉴</li>
+                    <li class="menu-item">메뉴</li>
+                </ul>
+        </div> 
+    </div>
+    <!-- 컨테이너 끝 -->
+    
+    <!-- 페이지 제목 --> 
+    <h1>This is my page</h1> 
+    <!-- 버튼과 링크 --> 
+    <a href="https://github.com/Doilob">   
+        <img id="icon" src="image\github-mark\github-mark\github-mark.png" alt="My github" title="My github"> 
+    </a>
 </body>
 <footer>
-    <div class="container">
+    <div class="containerbt">
       <div class="left-halfbt">
         <p>Copyright © 2023</p>
       </div>
@@ -45,4 +47,4 @@
       </div>
     </div>
   </footer>
-</html> 
+</html>
