--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <input id="check-btn" type="checkbox" />
             <label for="check-btn" class="menu-label">Click Me!</label>
                 <ul class="menu-list">
-                    <li class="menu-item">메뉴</li>
+                    <li class="menu-item">aps</li>
                     <li class="menu-item">메뉴</li>
                     <li class="menu-item">메뉴</li>
                     <li class="menu-item">메뉴</li>
