--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- 컨테이너 시작 -->
     <div class="container"> 
         <div class="left-half"> 
-        <p>PRIVATE PORTFOLIO</p> 
+        <p>Main Archive</p> 
         </div> 
         <div class="right-half"> 
             <input id="check-btn" type="checkbox" />
