--- a/index.html
+++ b/index.html
@@ -9,18 +9,8 @@
 <body> 
   <!-- 컨테이너 시작 -->
     <div class="container"> 
-        <div class="left-half"> 
+        <div class="top"> 
         <p>Main Archive</p> 
-        </div> 
-        <div class="right-half"> 
-            <input id="check-btn" type="checkbox" />
-            <label for="check-btn" class="menu-label">Click Me!</label>
-                <ul class="menu-list">
-                    <li class="menu-item">aps</li>
-                    <li class="menu-item">메뉴</li>
-                    <li class="menu-item">메뉴</li>
-                    <li class="menu-item">메뉴</li>
-                </ul>
         </div> 
     </div>
     <!-- 컨테이너 끝 -->
