--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
         <div class="top"> 
         <p>Main Archive</p> 
         </div> 
-    </div>
-    <!-- 컨테이너 끝 -->
-    
-    <!-- 페이지 제목 --> 
-    <h1>This is my page</h1> 
-    <!-- 버튼과 링크 --> 
-    <a href="https://github.com/Doilob">   
-        <img id="icon" src="image\github-mark\github-mark\github-mark.png" alt="My github" title="My github"> 
-    </a>
+        <div class="bottom">
+        <p>
+        <!-- 버튼과 링크 --> 
+          <a href="https://github.com/Doilob">   
+          <img id="icon" src="image\github-mark\github-mark\github-mark.png" alt="My github" title="My github"> 
+        </a>
+        </div>
+
+  <!-- 컨테이너 끝 -->
 </body>
 <footer>
     <div class="containerbt">
