--- a/index.html
+++ b/index.html
@@ -7,19 +7,17 @@
   <title>My Archive</title> 
 </head> 
 <body> 
-  <!-- 컨테이너 시작 -->
-    <div class="container"> 
-        <div class="top"> 
-          <p>Main Archive</p> 
-        </div> 
-        <div class="bottom">
-        <!-- 버튼과 링크 --> 
-          <a href="https://github.com/Doilob">   
-          <img id="icon" src="image\github-mark\github-mark\github-mark.png" alt="My github" title="My github"> 
-          </a>
-        </div>
-
-  <!-- 컨테이너 끝 -->
+  <!-- top start -->
+    <div class="top"> 
+      <p>Main Archive</p> 
+    </div>
+    <!-- bottom start -->
+    <div class="bottom">
+      <!-- 버튼과 링크 --> 
+      <a href="https://github.com/Doilob">   
+        <img id="icon" src="image\github-mark\github-mark\github-mark.png" alt="My github" title="My github"> 
+      </a>
+    </div>    
 </body>
 <footer>
     <div class="containerbt">
