--- a/index.html
+++ b/index.html
@@ -13,25 +13,23 @@
     </div>
     <!-- bottom start -->
     <div class="bottom">
-      <!-- 버튼과 링크 --> 
-      <a href="https://github.com/Doilob">   
-        <img id="icon" src="image\github-mark\github-mark\github-mark.png" alt="My github" title="My github"> 
-      </a>
+      <ul class="ul_icon">
+        <li class="li_icon">
+          <a href="https://github.com/Doilob"> 
+            <img id="icon" src="image\github-mark.png" alt="Doilob's github" title="Doilob's github">
+          </a>  
+        </li>
+        <li class="li_icon">
+          <a href="https://youtube.com/@doilob"> 
+            <img id="icon" src="image\youtube-mark.png" alt="Doilob's Youtube" title="Doilob's Youtube">
+          </a>  
+        </li>
+      </ul>
     </div>    
 </body>
 <footer>
-    <div class="containerbt">
-      <div class="left-halfbt">
-        <p>Copyright © 2023</p>
-      </div>
-      <div class="right-halfbt">
-        <ul class="social-list">
-          <li><a href="https://www.facebook.com"><i class="fab fa-facebook-f"></i></a></li>
-          <li><a href="https://www.twitter.com"><i class="fab fa-twitter"></i></a></li>
-          <li><a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a></li>
-          <li><a href="https://www.linkedin.com"><i class="fab fa-linkedin-in"></i></a></li>
-        </ul>
-      </div>
+    <div class="Copyright_text">
+        <p>Copyright © 2024 Doilob's Homepage</p>
     </div>
   </footer>
 </html>
