--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
             <img id="icon" src="image\youtube-mark.png" alt="Doilob's Youtube" title="Doilob's Youtube">
           </a>  
         </li>
+        <li class="li_icon">
+          <a href=""> 
+            <img id="icon" src="image\on-working.png" alt="Caution!" title="Caution!">
+          </a>  
+        </li>
       </ul>
     </div>    
 </body>
