--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </body>
 <footer>
     <div class="Copyright_text">
-        <p>Copyright © 2024 Doilob's Homepage</p>
+        <p>Copyrightⓒ2024 by Doilob. All Page content is property of Doilob</p>
     </div>
   </footer>
 </html>
