--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <ul class="ul_icon">
         <li class="li_icon">
           <a href="https://github.com/Doilob"> 
-            <img id="icon" src="image\github-mark.png" alt="Doilob's github" title="Doilob's github">
+            <img id="icon" src="image\github-mark.png" alt="Doilob's Github" title="Doilob's github">
           </a>  
         </li>
         <li class="li_icon">
