--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html> 
 <html lang="ko"> 
-<head> 
+<head>
   <meta charset="utf-8"> 
   <link rel="stylesheet" href="styles/styles.css"> 
   <link rel="icon" href="image/My_Hompage_icon.ico" type="image/x-icon" sizes="16x16"> 
@@ -17,17 +17,32 @@
         <li class="li_icon">
           <a href="https://github.com/Doilob"> 
             <img id="icon" src="image\github-mark.png" alt="Doilob's Github" title="Doilob's github">
-          </a>  
+          </a>
+          <p id="icon-text">Github</p>
         </li>
         <li class="li_icon">
           <a href="https://youtube.com/@doilob"> 
             <img id="icon" src="image\youtube-mark.png" alt="Doilob's Youtube" title="Doilob's Youtube">
-          </a>  
+          </a>
+          <p id="icon-text">Youtube</p>  
         </li>
         <li class="li_icon">
           <a href=""> 
             <img id="icon" src="image\on-working.png" alt="Caution!" title="Caution!">
-          </a>  
+          </a>
+          <p id="icon-text">On working</p>  
+        </li>
+        <li class="li_icon">
+          <a href=""> 
+            <img id="icon" src="image\on-working.png" alt="Caution!" title="Caution!">
+          </a>
+          <p id="icon-text">On Working</p>  
+        </li>
+        <li class="li_icon">
+          <a href=""> 
+            <img id="icon" src="image\on-working.png" alt="Caution!" title="Caution!">
+          </a>
+          <p id="icon-text">On Working</p>  
         </li>
       </ul>
     </div>    
