--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
         </li>
         <li class="li_icon">
           <a href=""> 
-            <img id="icon" src="image\on-working.png" alt="Caution!" title="Caution!">
+            <img id="icon" onClick="alert('작업중입니다')" src="image\on-working.png" alt="Caution!" title="Caution!">
           </a>
           <p id="icon-text">On working</p>  
         </li>
         <li class="li_icon">
           <a href=""> 
-            <img id="icon" src="image\on-working.png" alt="Caution!" title="Caution!">
+            <img id="icon" onClick="alert('작업중입니다')" src="image\on-working.png" alt="Caution!" title="Caution!">
           </a>
           <p id="icon-text">On Working</p>  
         </li>
         <li class="li_icon">
           <a href=""> 
-            <img id="icon" src="image\on-working.png" alt="Caution!" title="Caution!">
+            <img id="icon" onClick="alert('작업중입니다')" src="image\on-working.png" alt="Caution!" title="Caution!">
           </a>
           <p id="icon-text">On Working</p>  
         </li>
