--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"> 
   <link rel="stylesheet" href="styles/styles.css"> 
   <link rel="icon" href="image/My_Hompage_icon.ico" type="image/x-icon" sizes="16x16"> 
-  <title>My Archive</title> 
+  <title>Main Archive</title> 
 </head> 
 <body> 
   <!-- top start -->
@@ -30,13 +30,13 @@
           <a href=""> 
             <img id="icon" onClick="alert('작업중입니다')" src="image\on-working.png" alt="Caution!" title="Caution!">
           </a>
-          <p id="icon-text">On working</p>  
+          <p id="icon-text">Portfolio</p>  
         </li>
         <li class="li_icon">
           <a href=""> 
             <img id="icon" onClick="alert('작업중입니다')" src="image\on-working.png" alt="Caution!" title="Caution!">
           </a>
-          <p id="icon-text">On Working</p>  
+          <p id="icon-text">Gallery</p>  
         </li>
         <li class="li_icon">
           <a href=""> 
