--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html> 
 <html lang="ko"> 
 <head>
+  <!-- Fonts -->
+  
   <meta charset="utf-8"> 
   <link rel="stylesheet" href="styles/styles.css"> 
   <link rel="icon" href="image/My_Hompage_icon.ico" type="image/x-icon" sizes="16x16"> 
