fix footer padding

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <div class="bottom">
       <ul class="ul_icon">
         <li class="li_icon">
-          <a href="https://github.com/Doilob"> 
+          <a href="https://github.com/Doilob" target="_blank"> 
             <img id="icon" src="image\github-mark.png" alt="Doilob's Github" title="Doilob's github">
           </a>
           <p id="icon-text">Github</p>
         </li>
         <li class="li_icon">
-          <a href="https://youtube.com/@doilob"> 
+          <a href="https://youtube.com/@doilob" target="_blank"> 
             <img id="icon" src="image\youtube-mark.png" alt="Doilob's Youtube" title="Doilob's Youtube">
           </a>
           <p id="icon-text">Youtube</p>  
